Added markdown to beginning

--- a/MachineLearningTut.ipynb
+++ b/MachineLearningTut.ipynb
@@ -1,9 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting Python set up is really hard!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "307f3d31-985c-4592-8750-3c3c0d8ed8c9",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3027078-bfc3-4fab-842f-2e7ba0aa30d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +94,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ba0067-9869-4431-a5c2-5d037e0906b0",
    "metadata": {},
    "source": [
     "Now we can get the dataset and start to look at it."
@@ -98,7 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f50f144-4c9f-4465-abcc-2b1705fff8de",
    "metadata": {},
    "outputs": [],
    "source": [
