Added intro paragraph

--- a/MachineLearningTut.ipynb
+++ b/MachineLearningTut.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d35d2d45-71f4-4816-90f8-be5bc0f5a30a",
    "metadata": {},
    "source": [
-    "Getting Python set up is really hard!"
+    "Setting up the Python environment was tough! Installing packages in R is very simple thanks to RStudio, but installing Python packages was way more complicated. First I tried to write my script and install packages through RStudio since RStudio has integrated Python functionality. This didn't work very well for reasons I still don't totally understand. However, I also soon realized it was not the best tool for this project since Python is integrated for the purpose of mixed R/Python scripts and not for stand-alone Python. So I decided to install Jupyter, for which I needed conda. The miniconda installation through R helped with this but I needed Windows to look in the right place for the conda command. This involved adding a file path to the PATH directory through the control panel. Then I was able to install Jupyter as well as the modules needed, and I created a new virtual environment for the project, following instructions from here: https://towardsdatascience.com/environments-conda-pip-aaaaah-d2503877884c. I was then able to use pip for installing individual packages but again, Windows did not know where to look for them. I added another path to the PATH directory, and at that point, it all started to work."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "11045446",
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9a83ab4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "503f3d5d",
    "metadata": {},
    "source": [
     "Now we can get the dataset and start to look at it."
@@ -102,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a19bbc46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
